force-app/main/default/objects/Pharmacy_Sales_Recommendation__c/Pharmacy_Sales_Recommendation__c.object-meta.xml
<CustomObject>
    <label>Pharmacy Sales Recommendation</label>
    <nameField>
        <displayFormat>PSR-{00000}</displayFormat>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharmacy Sales Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>