force-app/main/default/objects/Pharmacy_Sales_Recommendation__c/fields/Recommendation_Type__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Type__c</fullName>
    <label>Recommendation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EnsurePlan</fullName>
                <label>Ensure Plan</label>
            </value>
            <value>
                <fullName>UpdatePlanTarget</fullName>
                <label>Update Plan Target</label>
            </value>
            <value>
                <fullName>CreateVisit</fullName>
                <label>Create Visit</label>
            </value>
            <value>
                <fullName>UpdateAccountRating</fullName>
                <label>Update Account Rating</label>
            </value>
            <value>
                <fullName>UpdateVision</fullName>
                <label>Update Vision</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>